objects/Lease_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Lease_Payment__c</fullName>
        <label>Annual Lease Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Payments_Year__c</fullName>
        <label>Annual Lease Payments Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_SystemProduction_Guarantee_Year__c</fullName>
        <label>Annual SystemProduction Guarantee Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_Price_per_kWh__c</fullName>
        <label>Approximate Price per kWh</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Monthy_Payment__c</fullName>
        <label>Base Monthy Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Payment__c</fullName>
        <label>Cash Payment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Price_Return_On_Investment_year1__c</fullName>
        <label>Cash Price Return On Investment year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Price_Return_On_Investment_year5__c</fullName>
        <label>Cash Price Return On Investment year5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Lease_Per_kWh__c</fullName>
        <label>Cost of Lease Per kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Lease_per_KWh_w_auto_ACH__c</fullName>
        <description>NH- used on the NH proposal.</description>
        <formula>(Est_Mthly_Paymt_includingTax_w_auto_ACH__c  * 12) / ( System_Production_Annual_Production__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Lease per KWh w auto ACH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_per_watt_AC__c</fullName>
        <label>Cost per watt AC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_watt_DC__c</fullName>
        <label>Cost per watt DC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Production_kWh_Text__c</fullName>
        <description>This field is used in the controller class proposalCashPortrait, This is used to display System &apos;Cumulative Production kWh&apos;  field data in the fomat of ###,###,##0</description>
        <label>Cumulative Production kWh Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Production_kWh__c</fullName>
        <label>Cumulative Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Monthly_Paymt_w_o_formula__c</fullName>
        <formula>IF(  Quote__r.Full_PrePayment_Amount_Base_Amount__c &lt;&gt; null || Quote__r.Full_PrePayment_Amount_Base_Amount__c &lt;&gt; 0.00,
Base_Monthy_Payment__c  +  Estimated_Tax_on_Monthly_Payment__c,
Base_Monthy_Payment__c  +  Estimated_Tax_on_Monthly_Payment__c  - 7.50)</formula>
        <label>Est Monthly Paymt (w/o) formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Mthly_Paymt_includingTax_w_auto_ACH__c</fullName>
        <label>Est Mthly Paymt includingTax w auto ACH</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Mthly_Paymt_with_formula__c</fullName>
        <formula>Base_Monthy_Payment__c  +  Estimated_Tax_on_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Mthly Paymt with formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Payment_inclusive_of_T__c</fullName>
        <label>Est Monthly Paymt inclusive of Tax (w/o)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Tax_on_Monthly_Payment__c</fullName>
        <label>Estimated Tax on Monthly Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Base_Monthly_Payment__c</fullName>
        <formula>IF(RIGHT($User.CountryDomainText__c,2)=&apos;au&apos;, Base_Monthy_Payment__c,Base_Monthy_Payment__c  - IF( Base_Monthy_Payment__c &gt; 0, 7.50,0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Base Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Estimated_Monthly_W_Tax_No_ACH__c</fullName>
        <formula>IF(Base_Monthy_Payment__c &gt; 0,( Final_Estimated_Tax_on_Monthly__c +  Final_Base_Monthly_Payment__c + 7.50), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Estimated Monthly  W Tax No ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Estimated_Monthly_W_Tax_No_ACH_p2__c</fullName>
        <formula>If( ISPICKVAL(Temp_Monthly_Lease_Payments__c, &apos;Year 1:11 Monthly Lease Payments&apos;), (&apos;11 monthly payments of &apos;  + &apos; &apos;), (&apos;12 monthly payments of &apos;  + &apos; &apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Estimated Monthly  W Tax No ACH p2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Estimated_Monthly_W_Tax_W_ACH__c</fullName>
        <formula>IF(Base_Monthy_Payment__c &gt; 0, ( Final_Estimated_Monthly_W_Tax_No_ACH__c ) - 7.50, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Estimated Monthly  W Tax W ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Estimated_Tax_on_Monthly__c</fullName>
        <formula>IF(Base_Monthy_Payment__c &gt; 0,  Final_Base_Monthly_Payment__c  *  IF(Final_Tax_Rate__c &gt; 0 , Final_Tax_Rate__c, 0)  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Estimated Tax on Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Tax_Rate__c</fullName>
        <label>Final Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Total_Yearly_Page_2__c</fullName>
        <formula>IF( Base_Monthy_Payment__c &gt; 0,  Final_Estimated_Monthly_W_Tax_No_ACH__c   * 12,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Yearly Page 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Total_Yearly_Page_4__c</fullName>
        <formula>IF( Base_Monthy_Payment__c &gt; 0,   Final_Base_Monthly_Payment__c   * 12,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Yearly Page 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Year__c</fullName>
        <label>Guarantee Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Range_of_Annual_Production__c</fullName>
        <label>Guaranteed Range of Annual Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payments_Year__c</fullName>
        <label>Lease Payments Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_With_PV_year1__c</fullName>
        <description>Monthly Electric Bill With PV year1</description>
        <label>Monthly Electric Bill With PV year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_With_PV_year5__c</fullName>
        <label>Monthly Electric Bill With PV year5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Without_PV_year1__c</fullName>
        <label>Monthly Electric Bill Without PV year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_Without_PV_year5__c</fullName>
        <label>Monthly Electric Bill Without PV year5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_saving_year1__c</fullName>
        <description>Monthly Electric Bill saving year1</description>
        <label>Monthly Electric Bill saving year1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill_saving_year5__c</fullName>
        <label>Monthly Electric Bill saving year5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <description>SG: GPP: This field stores monthly fee for the lease payment. for example ACH or any other fees</description>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Lease_Payment_7_50_discount__c</fullName>
        <formula>Monthly_Lease_Payment__c  - 7.50</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Lease Payment ($7.50 discount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Lease_Payment__c</fullName>
        <label>Monthly Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Loan_Payment_net_of_ITC__c</fullName>
        <label>Monthly Loan Payment net of ITC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Loan_Payment_with_ITC__c</fullName>
        <label>Monthly Loan Payment with ITC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payments_and_with_automatic_ACH__c</fullName>
        <label>Monthly Payments and with automatic ACH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PeGu_Estimate__c</fullName>
        <label>PeGu Estimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Electricity_Produced__c</fullName>
        <label>Percentage Electricity Produced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Every lease progress should look-up to a quote.</description>
        <inlineHelpText>Record to track payment terms / performance ranges of a quoted system.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Lease Schedules</relationshipLabel>
        <relationshipName>Lease_Progress</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Per_KWH__c</fullName>
        <label>Rate Per KWH</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Design_Factor__c</fullName>
        <label>Rebate Design Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Lease_Period__c</fullName>
        <label>Remaining Lease Period</label>
        <picklist>
            <picklistValues>
                <fullName>Year 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remaining_Lease_Value2__c</fullName>
        <label>Remaining Lease Value2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Lease_Value__c</fullName>
        <label>Remaining Lease Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoundOff_Base_Monthly_Payment__c</fullName>
        <formula>ROUND(Base_Monthy_Payment__c,2)</formula>
        <label>RoundOff Base Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoundOff_Rate_Per_KWH__c</fullName>
        <formula>ROUND( Rate_Per_KWH__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoundOff Rate Per KWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundOff_Rate_Per_kWh_w_ACH__c</fullName>
        <description>Rounding off the Cost of Lease per KWh w auto ACH</description>
        <formula>ROUND( Cost_of_Lease_per_KWh_w_auto_ACH__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoundOff Rate Per kWh w ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundOff_Remaining_Lease_Value__c</fullName>
        <formula>ROUND(Remaining_Lease_Value__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoundOff Remaining Lease Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Loan_Interest_Rate__c</fullName>
        <label>Solar Loan Interest Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SystemProdNumber__c</fullName>
        <formula>TEXT(System_Production_Annual_Production__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SystemProdNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Production_Annual_Production_Text__c</fullName>
        <description>This field is used in the controller class proposalCashPortrait, This is used to display System Production Annual Production field data in the fomat of ###,###,##0</description>
        <label>System Production Annual Production Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Production_Annual_Production__c</fullName>
        <label>System Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_AC__c</fullName>
        <label>System Size AC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_DC__c</fullName>
        <label>System Size DC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <formula>Quote__r.Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Temp_Monthly_Lease_Payments__c</fullName>
        <label>Temp Monthly Lease Payments</label>
        <picklist>
            <picklistValues>
                <fullName>Year 1: 11 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 2: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 3: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 4: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 5: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 6: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 7: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 8: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 9: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 10: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 11: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 12: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 13: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 14: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 15: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 16: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 17: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 18: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 19: 12 Monthly Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 20: 12 Monthly Lease Payments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upfront_Incentives__c</fullName>
        <label>Upfront Incentives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Lease_Payment__c</fullName>
        <label>Upfront Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X105_of_S_P_A_P_1__c</fullName>
        <description>new field for 105% of S P A P</description>
        <label>105% of S P A P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X105_of_S_P_A_P__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) &gt;= DATE(2013,06,14) , X105_of_S_P_A_P_1__c , System_Production_Annual_Production__c * 1.05)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>105% of S P A P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X95_of_S_P_A_P_1__c</fullName>
        <description>new field for 95% of S P A P</description>
        <label>95% of S P A P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X95_of_S_P_A_P__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) &gt;=  DATE(2013,06,14) ,  X95_of_S_P_A_P_1__c , System_Production_Annual_Production__c * 0.95)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>95% of S P A P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Lease Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Lease Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Schedules</pluralLabel>
    <recordTypes>
        <fullName>FR_LeaseSchedule</fullName>
        <active>true</active>
        <description>Leaseschedule for france</description>
        <label>FR LeaseSchedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Lease_Schedule</fullName>
        <active>true</active>
        <label>NA Lease Schedule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>